--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
