--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/storybook-addon": "^5.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.12.17",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "next": "13.4.7",
